--- a/src/styles/components/_Bootstrap_reboot.scss
+++ b/src/styles/components/_Bootstrap_reboot.scss
@@ -21,7 +21,7 @@ html {
   }
   
   h1 {
-    font-size: 2em;
+    font-size: 2rem;
     margin: 0.67em 0;
   }
   
@@ -266,7 +266,7 @@ html {
   
   body {
     font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-size: 1rem;
+    font-size: 18px;
     font-weight: normal;
     line-height: 1.5;
   }
