--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,5 @@
 @import "components/Bootstrap_reboot";
 @import "components/Global";
+@import "components/Header";
+@import "components/Home";
+@import "components/English"
