--- a/src/styles/components/_Global.scss
+++ b/src/styles/components/_Global.scss
@@ -11,17 +11,22 @@ $secondary-color: orange;
 }
 
 body {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    position: relative;
     background-color: #18191a;
     font-family: $font;
     font-size: 16px!important;
     color: white;
 }
+.Main {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
 #content {
-    padding: 2rem;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // justify-content: space-evenly;
+    height: 100%;
+    margin: 3rem;
 }
