--- a/src/styles/components/_English.scss
+++ b/src/styles/components/_English.scss
@@ -6,16 +6,25 @@
     border: 1px solid white;
     border-radius: 10px;
     padding: 1.5rem;
+    padding-bottom: 0;
     &__inputwrapper {
         display: flex;
         justify-content: space-evenly;
         width: 100%;
+        margin-top: 1rem;
     }
     &__verb {
+        width: 110%;
+        background-color: #EBB348;
+        color: black;
+        display: flex;
+        align-content: flex-end;
+        justify-content: center;
+        margin-bottom: 1.5rem;
         .currentVerb {
-            font-size: 2.3rem;
+            font-size: 2.5rem;
             font-weight: bold;
-            margin-bottom: 1.5rem;
+            margin: 0;
         }
     }
     &__answermsg {
@@ -25,6 +34,13 @@
             font-size: 1rem;
             color: white;
         }
+    }
+    &__answerCounter {
+        width: 100%;
+        margin-top: 1.5rem;
+        padding-right: .5rem;
+        display: flex;
+        justify-content: space-between;
     }
 }
 input[type=text] {
@@ -36,12 +52,15 @@ input[type=text] {
     color: white;
     text-align: center;
     font-size: 1.2rem;
+    &:focus {
+        border-bottom: 2px solid $secondary-color;
+    }
 }
 .input--empty {
-    border-bottom: 2px solid orange!important;
-    color: orange;
+    border-bottom: 2px solid yellow!important;
+    color: yellow;
     &:before {
-        content: ' \26A0';
+        content: '\26A0';
     }
 }
 .input--wrong {
@@ -58,15 +77,50 @@ input[type=text] {
         content: ' \2714';
     }
 }
-input[type=button] {
-    margin: 1rem 0;
+.btn--check, .btn--skip, .btn--start {
+    color: white;
     background:  #18191a;
+    border: 0;
+}
+.btn--check {
+    margin: 1rem 0;
     border: 2px solid white;
     padding: 0.5rem;
-    color: white;
     font-weight: bold;
     &:hover {
-        border: 2px solid rgb(51, 65, 51);
+        border: 2px solid $secondary-color;
+        cursor: not-allowed;
+    }
+}
+.btn--skip {
+    border: none;
+    border-bottom: 2px solid white;
+    padding: 0;
+    font-weight: normal;
+    margin-left: .5rem;
+    &:hover {
+        border-bottom: 2px solid $secondary-color;
+        cursor: not-allowed;
+    }
+}
+.btn--start {
+    padding: 0 0.5rem;
+    font-size: 2rem;
+    font-weight: bold;
+    &:hover {
+        color: black;
+        background-color: #EBB348;
         cursor: pointer;
     }
+}
+.timer-info {
+    margin: 0;
+    font-family: 'Roboto';
+    &__counter {
+        margin-right: 1rem;
+    }
+}
+.countdown {
+    @extend .timer-info;
+    font-size: 1.2rem;
 }
