--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -15,6 +15,7 @@
     }
     &__title {
         @include flex-center;
+        font-family: 'Roboto';
     }
     &__socials {
         @include flex-center;
@@ -46,6 +47,7 @@
             font-size: 1.5rem;
             a {
                 color: white;
+                font-family: 'Roboto';
             }
             a:hover{
                 border-bottom: 2px solid $secondary-color;
