--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -5,11 +5,24 @@
     flex-direction: column;
     align-items: center;
 }
+hr{
+    width:100%;
+    border: 0;
+    height: 2px;
+    background-image: linear-gradient(to right,
+                     rgba(0, 0, 0, 0),
+                     rgba(0, 0, 0, 0),
+                     rgba(255, 0, 0, 0.9),
+                     rgba(0, 0, 0, 0),
+                     rgba(0, 0, 0, 0)
+                     );
+}
 .form-content {
     display: flex;
     justify-content: space-between;
     width: 100%;
     margin-bottom: 10px;
+    padding-top: 20px;
 }
 #channel-form {
     width: 33%;
@@ -29,8 +42,11 @@
     &__item {
         margin: 0 10px;
         border-radius: 50%;
+        transition: 450ms all;
         &:hover {
             cursor: pointer;
+            transform: scale(0.8);
+            opacity: 0.5;
         }
     }
 }
@@ -52,7 +68,7 @@
 }
 .carousel {
     position: relative;
-    width: 100%;
+    max-width: 100%;
     padding: 20px;
     overflow-x: scroll;
     overflow-y: hidden;
@@ -88,7 +104,10 @@
         overflow: hidden;
         margin-right: 10px;
         &:hover ~ .wrapper-video__item {
-            transform: translate3d(100px, 0, 0);
+            transform: translate3d(70px, 0, 0);
+        }
+        &:last-child {
+            margin-right: 60px;
         }
     }
 }
