error msgs for yt section added

--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -28,6 +28,9 @@
                          );
     }
 }
+.yt-error { 
+    color: red;
+}
 .form-content {
     display: flex;
     justify-content: space-between;
