--- a/src/styles/components/_Home.scss
+++ b/src/styles/components/_Home.scss
@@ -30,6 +30,9 @@
 }
 .yt-error { 
     color: red;
+    &:before {
+        content: '\26A0';
+    }
 }
 .form-content {
     display: flex;
@@ -64,21 +67,27 @@
         }
     }
 }
+.updatebtn-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 33%;
+}
 .channel-submit, #updateVideos {
     @include button;
     border: 2px solid white;
     &:hover{
+        color: $secondary-color;
         border: 2px solid $secondary-color;
         cursor: pointer;
     }
 }
+#updateVideos {
+    width: auto ;
+    height: 30px;
+}
 .channel-submit {
     margin-left: 10px;
-}
-.updatebtn-wrapper {
-    display: flex;
-    justify-content: flex-end;
-    width: 33%;
 }
 .carousel {
     position: relative;
