--- a/src/styles/components/_Header.scss
+++ b/src/styles/components/_Header.scss
@@ -15,7 +15,8 @@
     }
     &__title {
         @include flex-center;
-        font-family: 'Roboto';
+        font-family: 'Lobster Two', sans-serif;
+        font-weight: lighter;
     }
     &__socials {
         @include flex-center;
@@ -31,6 +32,7 @@
             li a {
                 text-decoration: none;
                 color: $secondary-color;
+                font-family: 'Montserrat', sans-serif;
             }
         }
     }
@@ -47,7 +49,7 @@
             font-size: 1.5rem;
             a {
                 color: white;
-                font-family: 'Roboto';
+                font-family: 'Montserrat', sans-serif;
             }
             a:hover{
                 border-bottom: 2px solid $secondary-color;
