--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,4 +2,5 @@
 @import "components/Global";
 @import "components/Header";
 @import "components/Home";
-@import "components/English"
+@import "components/English";
+@import "components/todo";
