--- a/src/styles/components/_Todo.scss
+++ b/src/styles/components/_Todo.scss
@@ -1,7 +1,28 @@
-#notes-form {
+.notes-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   padding: 15px;
   border: 1px dashed yellow;
+  &__content {
+    @include input-text;
+    width: 50%;
+  }
+  &__button {
+    @include button; 
+    border: 1px solid #ffffff;
+    &:hover {
+      color: $secondary-color;
+      border: 1px solid $secondary-color;
+      cursor: pointer;
+    }
+  }
+  &__notecolor {
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .notes-wrapper {
@@ -9,25 +30,24 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  height: 100vh;
   margin: 15px;
   border: 1px dashed red;
 }
 
 .note {
   width: 250px;
-  min-height: 150px;
-  margin: 5px;
+  height: 200px;
+  margin: 10px;
   border-radius: 5px;
-  color: #ffffff;
-  border: 2px solid white;
+  overflow: auto;
   &__header {
     display: flex;
-    justify-content: flex-end;
-    padding: 0 3px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5px;
     .note-delete {
       height: auto;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: bold;
       &:hover {
         cursor: pointer;
@@ -36,6 +56,17 @@
     }
   }
    &__content{
-    padding: 5px;
+    padding: 5px 15px;
+  }
+  &::-webkit-scrollbar {
+    width: 3px;
+  }
+  &::-webkit-scrollbar-track {
+    background: $primary-color;
+  }
+  &::-webkit-scrollbar-thumb {
+    margin: 2px;
+    background-color: white;
+    border-radius: 20px;
   }
 }
