--- a/src/styles/components/_English.scss
+++ b/src/styles/components/_English.scss
@@ -137,3 +137,52 @@
         }
     }
 }
+.table-section {
+  color: black;
+  &__button {
+  
+  }
+  &__modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden; //enable scroll if needed
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+  }
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 80%;
+    overflow-y: auto;
+    border: 2px solid #dddddd;
+    border-radius: 5px;
+    &__close {
+      color: #aaaaaa;
+      float: right;
+      font-size: 1.7rem;
+      font-weight: bold;
+      &:hover {
+        color: red;
+        text-decoration: none;
+        cursor: pointer;
+      }
+    }
+    &__table {
+      width: 100%;
+      th, td {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+      }
+    }
+  }
+}
