--- a/src/styles/components/_English.scss
+++ b/src/styles/components/_English.scss
@@ -140,7 +140,17 @@
 .table-section {
   color: black;
   &__button {
-  
+    & > button {
+      @include button;
+      font-size: 1.5rem;
+      border: 1px solid #ffffff;
+      padding: 10px;
+      &:hover {
+        cursor: pointer;
+        color: $secondary-color;
+        border: 1px solid $secondary-color;
+      }
+    }
   }
   &__modal {
     display: none;
@@ -151,17 +161,17 @@
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden; //enable scroll if needed
+    overflow: hidden;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
   }
   .modal-content {
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
+    padding: 5px 20px 20px 20px;
     border: 1px solid #888;
     width: 80%;
-    height: 80%;
+    height: 90%;
     overflow-y: auto;
     border: 2px solid #dddddd;
     border-radius: 5px;
@@ -176,12 +186,34 @@
         cursor: pointer;
       }
     }
+    &__input {
+      margin-top: 5px;
+      border: 0;
+      border-bottom: 1px solid gray;
+    }
     &__table {
       width: 100%;
       th, td {
         border: 1px solid #dddddd;
         text-align: left;
         padding: 8px;
+        text-transform: capitalize;
+      }
+      td > a {
+        font-weight: bold;
+        color: black;
+        text-decoration: none;
+        &::before{
+          font-size: .7rem;
+          content: "🔗"; 
+        }
+      }
+      th {
+        position: sticky;
+        top: -8px;
+        background-color: $primary-color;
+        color: #ffffff;
+        box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
       }
     }
   }
