--- a/src/styles/components/_Global.scss
+++ b/src/styles/components/_Global.scss
@@ -55,7 +55,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
+    height: auto;
     margin: 3rem 3rem 0 3rem;
 }
 input {
