second spanish meaning for some verbs

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,4 +3,4 @@
 @import "components/Header";
 @import "components/Home";
 @import "components/English";
-@import "components/todo";
+@import "components/Todo";
